Add missing mvn files, improve contoller and README